--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+
+
+  
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +12,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+
     "web-vitals": "^2.1.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,3 +44,4 @@
     ]
   }
 }
+
