--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "@mui/material": "^5.2.2",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0"
   },
   "scripts": {
     "start": "node sammy.js; serve -s _static -l tcp://0.0.0.0:$PORT -n",
