--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.0 || ^18.2.0",
+    "react-dom": "^17.0.0 || ^18.2.0",
     "react-scripts": "3.3.1",
     "serve": "^11.3.2",
     "@mui/material": "^5.2.2",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0"
   },
   "scripts": {
     "start": "node sammy.js; serve -s _static -l tcp://0.0.0.0:$PORT -n",
